@@ -1,3 +1,5 @@
+ - Redefine operator + for FiniteElements and replace + by *
+ - Rename ElementUnion -> EnrichedElement
  - Add support for tan() and inverse trigonometric functions
 0.5.2 [2010-02-15]
  - Attach form data to preprocessed form, accessible by form.form_data()
